Diseño de interfaz ok. Se agregan vistas sin implementación aún.

--- a/crscheduler-web/web/WEB-INF/template/footer.xhtml
+++ b/crscheduler-web/web/WEB-INF/template/footer.xhtml
@@ -14,9 +14,9 @@
                 <div class="Container50 Responsive100">
                     <div class="DispInlBlock Fleft">
                         <span class="DispInlBlock FontSourceSansLight BoldGray Fs12 Fleft HoverEffect TexAlRight FloatNoneOnMobile">
-                            <i class="fa fa-copyright"></i>2016 <a class="BoldGray" href="http://www.blueprintsit.cl">BluePrints IT.</a>
+                            <i class="fa fa-copyright"></i>2017 <a class="BoldGray" href="http://www.blueprintsit.cl">Taller de Base de datos.</a>
                         </span><br/>
-                        <span class="DispInlBlock FontSourceSansLight BoldGray Fs12 Fleft HoverEffect TexAlRight FloatNoneOnMobile">Version: <h:outputText value="${bpversion['version']} ${bpversion['build.date']}"></h:outputText></span>
+                        <span class="DispInlBlock FontSourceSansLight BoldGray Fs12 Fleft HoverEffect TexAlRight FloatNoneOnMobile">Version: 1.0.0</span>
                     </div>
                 </div>
 
