--- a/crscheduler-web/web/WEB-INF/template/topbar.xhtml
+++ b/crscheduler-web/web/WEB-INF/template/topbar.xhtml
@@ -8,7 +8,7 @@
     
     <div id="layout-topbar">
     	<div id="logo" class="Fleft">
-        	<a href=""><h:graphicImage alt="BluePrints IT Framework" name="metlife_logo.png" styleClass="Fleft" library="images" /></a>
+        	<a href=""><h:graphicImage alt="BluePrints IT Framework" name="logo_ciisa.png" styleClass="Fleft" library="images" /></a>
             <a id="mobile-menu-button" class="Fright ShowOnMobile ripplelink Unselectable ShadowEffect"><i class="icon-add186"></i></a>
         </div>
         
