--- a/crscheduler-web/web/views/calendarioGeneral.xhtml
+++ b/crscheduler-web/web/views/calendarioGeneral.xhtml
@@ -13,7 +13,7 @@
                         <p:growl id="messages" showDetail="true" />
 
                         <h:panelGrid columnClasses="value">
-                            <h3>Gestión de aulas</h3>
+                            <h3 style="display:none">Gestión de aulas</h3>
                             <p:schedule id="scheduleLocale" value="#{scheduleView.eventModel}" locale="cl" />
                         </h:panelGrid>
 
