--- a/crscheduler-web/web/WEB-INF/template/layoutmenu.xhtml
+++ b/crscheduler-web/web/WEB-INF/template/layoutmenu.xhtml
@@ -11,25 +11,20 @@
             <li>
                 <a class="menulink ripplelink">
                     <i class="icon-round58 Fs40"></i>
-                    <span class="Fs18">#{authenticationBean.loggedUser.username}<i class="icon-downwards Fright Fs20"></i><br /><span class="Fs12 FontRobotoLight">#{authenticationBean.loggedUser.name}</span></span>
+                    <span class="Fs18">Usuario<i class="icon-downwards Fright Fs20"></i><br /><span class="Fs12 FontRobotoLight">Administrador</span></span>
                 </a>
             </li>
         </ul>
         <div class="Separator"></div>
 
-
-        <pr:menu>
-            <p:menuitem id="rm_sqlextractors" value="Extractores SQL" icon="fa fa-terminal" outcome="/views/extractores/extractores.xhtml"/>
-            <p:menuitem id="rm_odmodel" value="Modelo On Demand" icon="fa fa-cubes" outcome="/views/ondemand/modelos.xhtml"/>
-            <p:menuitem id="rm_altiuztemplate" value="Plantillas Altiuz" icon="fa fa-file-code-o" outcome="/views/altiuz/plantillas.xhtml"/>
-            <p:menuitem id="rm_process" value="Procesos" icon="fa fa-tasks" outcome="/views/procesos/procesos.xhtml"/>
-            <p:menuitem id="rm_bitacora" value="Bitácora" icon="fa fa-calendar" outcome="/views/bitacora/bitacora.xhtml"/>
-            <p:menuitem id="rm_configuraciones" value="Configuraciones" icon="fa fa-gears" outcome="/views/configuraciones.xhtml"/>
-            <p:menuitem id="rm_liteclient" value="Cliente Ligero" icon="fa fa-database" outcome="/views/liteclient.xhtml"/>
-            <p:menuitem id="rm_timers" value="Timers" icon="fa fa-clock-o" outcome="/views/timers/timers.xhtml"/>
-
-            <p:separator />
-        </pr:menu>
+        <h:form id="manu">
+            <pr:menu>
+                <p:menuitem id="ingresar_solicitud" value="Ingresar solicitud" icon="fa fa-check-square-o" />
+                <p:menuitem id="consulta_rut" value="Consulta por rut" icon="fa fa-search" />
+                <p:menuitem id="calendario_general" value="Calendario general" icon="fa fa-calendar" />
+                <p:separator />
+            </pr:menu>
+        </h:form>
 
 
 
