--- a/crscheduler-web/web/views/busqueda.xhtml
+++ b/crscheduler-web/web/views/busqueda.xhtml
@@ -12,8 +12,13 @@
                     <h:form>
                         <p:growl id="messages" showDetail="true" />
 
+                        <h:panelGrid columns="2">
+                            <label>Ingrese RUT</label>
+                            <p:inputText />
+                        </h:panelGrid>
+
                         <h:panelGrid columnClasses="value">
-                            <h3>Gestión de aulas</h3>
+                            <h3 style="display:none">Gestión de aulas</h3>
                             <p:schedule id="scheduleLocale" value="#{scheduleView.eventModel}" locale="cl" />
                         </h:panelGrid>
 
