--- a/crscheduler-web/web/WEB-INF/template/layoutmenu.xhtml
+++ b/crscheduler-web/web/WEB-INF/template/layoutmenu.xhtml
@@ -19,9 +19,9 @@
 
         <h:form id="manu">
             <pr:menu>
-                <p:menuitem id="ingresar_solicitud" value="Ingresar solicitud" icon="fa fa-check-square-o" />
-                <p:menuitem id="consulta_rut" value="Consulta por rut" icon="fa fa-search" />
-                <p:menuitem id="calendario_general" value="Calendario general" icon="fa fa-calendar" />
+                <p:menuitem id="ingresar_solicitud" value="Ingresar solicitud" icon="fa fa-check-square-o" outcome="solicitud"/>
+                <p:menuitem id="consulta_rut" value="Consulta por rut" icon="fa fa-search" outcome="busqueda"/>
+                <p:menuitem id="calendario_general" value="Calendario general" icon="fa fa-home" />
                 <p:separator />
             </pr:menu>
         </h:form>
