Se agrega link a vista home
Se agrega link a vista home

--- a/crscheduler-web/web/WEB-INF/template/layoutmenu.xhtml
+++ b/crscheduler-web/web/WEB-INF/template/layoutmenu.xhtml
@@ -21,7 +21,7 @@
             <pr:menu>
                 <p:menuitem id="ingresar_solicitud" value="Ingresar solicitud" icon="fa fa-check-square-o" outcome="solicitud"/>
                 <p:menuitem id="consulta_rut" value="Consulta por rut" icon="fa fa-search" outcome="busqueda"/>
-                <p:menuitem id="calendario_general" value="Calendario general" icon="fa fa-home" />
+                <p:menuitem id="calendario_general" value="Calendario general" icon="fa fa-home" outcome="home" />
                 <p:separator />
             </pr:menu>
         </h:form>
