Se agrega manager para capa de negocio
Se agrega manager para capa de negocio

--- a/crscheduler-web/web/resources/rio-layout/css/rio-layout.css
+++ b/crscheduler-web/web/resources/rio-layout/css/rio-layout.css
@@ -1558,3 +1558,7 @@ ul.ui-tabs-nav {
 #mobile-menu-button {
   background-color: rgb(19, 164, 56) !important;
 }
+
+.ui-button {
+  background-color:#43A047 !important;
+}
