--- a/crscheduler-web/web/views/home.xhtml
+++ b/crscheduler-web/web/views/home.xhtml
@@ -12,24 +12,34 @@
                     <h:form>
                         <p:growl id="messages" showDetail="true" />
 
-                        <p:schedule id="scheduleLocale" value="#{scheduleView.eventModel}" locale="cl" />
+                        <p:schedule id="scheduleLocale" value="#{scheduleView.eventModel}" locale="cl" widgetVar="myschedule">
+                            <p:ajax event="dateSelect" listener="#{scheduleView.onDateSelect}" update="eventDetails" oncomplete="PF('eventDialog').show();" />
+                            <p:ajax event="eventSelect" listener="#{scheduleView.onEventSelect}" update="eventDetails" oncomplete="PF('eventDialog').show();" />
+                            <p:ajax event="eventMove" listener="#{scheduleView.onEventMove}" update="messages" />
+                            <p:ajax event="eventResize" listener="#{scheduleView.onEventResize}" update="messages" />
+                        </p:schedule>
 
-                        <p:dialog widgetVar="eventDialog" header="Event Details" showEffect="clip" hideEffect="clip">
+                        <p:dialog widgetVar="eventDialog" header="Ingresar solicitud de sala" showEffect="clip" hideEffect="clip">
                             <h:panelGrid id="eventDetails" columns="2">
-                                <p:outputLabel for="title" value="Titles:" />
-                                <p:inputText id="title" value="#{scheduleView.event.title}" required="true" />
+                                <p:outputLabel value="Profesor:" for="acSimple" />
+                                <p:autoComplete id="acSimple" value="#{scheduleView.profesor}" completeMethod="#{scheduleView.completeText}" />
 
-                                <p:outputLabel for="from" value="From:" />
+                                <p:outputLabel for="title" value="Sala:" />
+                                <p:selectOneMenu id="title" style="width:125px" required="true">
+                                    <f:selectItem itemLabel="Seleccionar" itemValue="" />
+                                    <f:selectItem itemLabel="Sala 01" itemValue="Xbox One" />
+                                    <f:selectItem itemLabel="Sala 02" itemValue="PS4" />
+                                    <f:selectItem itemLabel="Sala 03" itemValue="Wii U" />
+                                </p:selectOneMenu>
+
+                                <p:outputLabel for="from" value="Hora desde:" />
                                 <p:calendar id="from" value="#{scheduleView.event.startDate}" timeZone="GMT+2" pattern="dd/MM/yyyy HH:mm"/>
 
-                                <p:outputLabel for="to" value="To:" />
+                                <p:outputLabel for="to" value="Hora hasta:" />
                                 <p:calendar id="to" value="#{scheduleView.event.endDate}" timeZone="GMT+2" pattern="dd/MM/yyyy HH:mm"/>
 
-                                <p:outputLabel for="allDay" value="All Day:" />
-                                <h:selectBooleanCheckbox id="allDay" value="#{scheduleView.event.allDay}" />
-
-                                <p:commandButton type="reset" value="Reset" />
-                                <p:commandButton id="addButton" value="Save" actionListener="#{scheduleView.addEvent}" oncomplete="PF('myschedule').update();PF('eventDialog').hide();" />
+                                <p:commandButton type="reset" value="Borrar" />
+                                <p:commandButton id="addButton" value="Guardar" actionListener="#{scheduleView.addEvent}" oncomplete="PF('myschedule').update();PF('eventDialog').hide();" />
                             </h:panelGrid>
                         </p:dialog>
                     </h:form>
