Cambios en la interfaz
Cambios en la interfaz

--- a/crscheduler-web/web/WEB-INF/template/layoutmenu.xhtml
+++ b/crscheduler-web/web/WEB-INF/template/layoutmenu.xhtml
@@ -8,10 +8,10 @@
 
     <div class="Animated05" id="layout-menu-cover">
         <ul class="layout-menu">
-            <li>
-                <a class="menulink ripplelink">
+            <li style="background-color: rgb(19, 164, 56);">
+                <a class="menulink ripplelink" style="color:#fff">
                     <i class="icon-round58 Fs40"></i>
-                    <span class="Fs18">Usuario<i class="icon-downwards Fright Fs20"></i><br /><span class="Fs12 FontRobotoLight">Administrador</span></span>
+                    <span class="Fs18">Homero Simpsons<i class="icon-downwards Fright Fs20"></i><br /><span class="Fs12 FontRobotoLight">Administrador</span></span>
                 </a>
             </li>
         </ul>
@@ -19,9 +19,8 @@
 
         <h:form id="manu">
             <pr:menu>
-                <p:menuitem id="ingresar_solicitud" value="Ingresar solicitud" icon="fa fa-check-square-o" outcome="solicitud"/>
+                <p:menuitem id="calendario_general" value="Calendario general" icon="fa fa-calendar" outcome="home" />
                 <p:menuitem id="consulta_rut" value="Consulta por rut" icon="fa fa-search" outcome="busqueda"/>
-                <p:menuitem id="calendario_general" value="Calendario general" icon="fa fa-home" outcome="home" />
                 <p:separator />
             </pr:menu>
         </h:form>
