--- a/crscheduler-web/web/WEB-INF/template/footer.xhtml
+++ b/crscheduler-web/web/WEB-INF/template/footer.xhtml
@@ -14,7 +14,7 @@
                 <div class="Container50 Responsive100">
                     <div class="DispInlBlock Fleft">
                         <span class="DispInlBlock FontSourceSansLight BoldGray Fs12 Fleft HoverEffect TexAlRight FloatNoneOnMobile">
-                            <i class="fa fa-copyright"></i>2017 <a class="BoldGray" href="http://www.blueprintsit.cl">Taller de Base de datos.</a>
+                            <i class="fa fa-copyright"></i>2017 Taller de Base de datos.
                         </span><br/>
                         <span class="DispInlBlock FontSourceSansLight BoldGray Fs12 Fleft HoverEffect TexAlRight FloatNoneOnMobile">Version: 1.0.0</span>
                     </div>
@@ -24,7 +24,9 @@
 
                 <div class="Container50 Responsive100">
                     <div class="DispInlBlock Fright">
-                        <h:graphicImage alt="BluePrints IT" name="images/blueprint-petit.jpg" styleClass="" library="blueprints" style="height:37px;"/>
+                        <span class="DispInlBlock FontSourceSansLight BoldGray Fs12 Fleft HoverEffect TexAlRight FloatNoneOnMobile">
+                            Integrantes: Agustín Santiago / José Fuentes
+                        </span>
                     </div>
                 </div>
             </div>
