--- a/crscheduler-web/web/WEB-INF/template/topbar.xhtml
+++ b/crscheduler-web/web/WEB-INF/template/topbar.xhtml
@@ -11,8 +11,8 @@
         	<a href=""><h:graphicImage alt="BluePrints IT Framework" name="logo_ciisa.png" styleClass="Fleft" library="images" /></a>
             <a id="mobile-menu-button" class="Fright ShowOnMobile ripplelink Unselectable ShadowEffect"><i class="icon-add186"></i></a>
         </div>
-        
-        <a class="ripplelink WhiteBlue Fright ShowOnMobile" id="show-top-menu"><i class="icon-show8"></i></a>
+
+        <h2 class="sub-title">Gestión de salas</h2>
 
     </div>
     
