--- a/crscheduler-web/web/views/home.xhtml
+++ b/crscheduler-web/web/views/home.xhtml
@@ -19,13 +19,13 @@
                             <p:ajax event="eventResize" listener="#{scheduleView.onEventResize}" update="messages" />
                         </p:schedule>
 
-                        <p:dialog widgetVar="eventDialog" header="Ingresar solicitud de sala" showEffect="clip" hideEffect="clip">
+                        <p:dialog widgetVar="eventDialog" header="Ingresar solicitud de sala" showEffect="clip" hideEffect="clip" modal="true">
                             <h:panelGrid id="eventDetails" columns="2">
                                 <p:outputLabel value="Profesor:" for="acSimple" />
-                                <p:autoComplete id="acSimple" value="#{scheduleView.profesor}" completeMethod="#{scheduleView.completeText}" />
+                                <p:autoComplete id="acSimple" value="#{scheduleView.profesor}" completeMethod="#{scheduleView.completeText}" required="true"/>
 
                                 <p:outputLabel for="title" value="Sala:" />
-                                <p:selectOneMenu id="title" style="width:125px" required="true">
+                                <p:selectOneMenu id="title" style="width:114px" required="true">
                                     <f:selectItem itemLabel="Seleccionar" itemValue="" />
                                     <f:selectItem itemLabel="Sala 01" itemValue="Xbox One" />
                                     <f:selectItem itemLabel="Sala 02" itemValue="PS4" />
@@ -38,8 +38,8 @@
                                 <p:outputLabel for="to" value="Hora hasta:" />
                                 <p:calendar id="to" value="#{scheduleView.event.endDate}" timeZone="GMT+2" pattern="dd/MM/yyyy HH:mm"/>
 
-                                <p:commandButton type="reset" value="Borrar" />
-                                <p:commandButton id="addButton" value="Guardar" actionListener="#{scheduleView.addEvent}" oncomplete="PF('myschedule').update();PF('eventDialog').hide();" />
+                                <p:commandButton type="reset" value="Borrar" style="margin-top:7px" />
+                                <p:commandButton id="addButton" value="Guardar" actionListener="#{scheduleView.addEvent}" oncomplete="PF('myschedule').update();PF('eventDialog').hide();"  style="float:right;margin-top:7px"/>
                             </h:panelGrid>
                         </p:dialog>
                     </h:form>
