Se agrega funcionalidad dummy

--- a/crscheduler-web/web/WEB-INF/template/layoutmenu.xhtml
+++ b/crscheduler-web/web/WEB-INF/template/layoutmenu.xhtml
@@ -8,7 +8,7 @@
 
     <div class="Animated05" id="layout-menu-cover">
         <ul class="layout-menu">
-            <li style="background-color: rgb(19, 164, 56);">
+            <li style="background-image: url('../resources/images/wallpaper.png');">
                 <a class="menulink ripplelink" style="color:#fff">
                     <i class="icon-round58 Fs40"></i>
                     <span class="Fs18">Homero Simpsons<i class="icon-downwards Fright Fs20"></i><br /><span class="Fs12 FontRobotoLight">Administrador</span></span>
