--- a/crscheduler-web/web/resources/rio-layout/css/rio-layout.css
+++ b/crscheduler-web/web/resources/rio-layout/css/rio-layout.css
@@ -1613,3 +1613,7 @@ ul.ui-tabs-nav {
 .fc-view-container .fc-month-view > table > thead {
   background-color: #2f2e2e !important;
 }
+
+.fc-toolbar button.ui-state-active {
+  background-color: rgba(60, 60, 59, 0.71) !important;
+}
