--- a/crscheduler-web/web/resources/rio-layout/css/rio-layout.css
+++ b/crscheduler-web/web/resources/rio-layout/css/rio-layout.css
@@ -1617,3 +1617,11 @@ ul.ui-tabs-nav {
 .fc-toolbar button.ui-state-active {
   background-color: rgba(60, 60, 59, 0.71) !important;
 }
+
+.ui-growl-image-error + .ui-growl-message {
+  color: #ffffff !important;
+}
+
+.ui-growl-item {
+  background-color: #3c3c3b !important;
+}
