--- a/crscheduler-web/web/views/home.xhtml
+++ b/crscheduler-web/web/views/home.xhtml
@@ -10,37 +10,58 @@
             <div class="ContainerIndent">
                 <div class="Card ShadowEffect TexAlCenter">
                     <h:form>
-                        <p:growl id="messages" showDetail="true" />
+                        <p:growl id="messages" showDetail="true" life="5000000" sticky=""/>
 
-                        <p:schedule id="scheduleLocale" value="#{scheduleView.eventModel}" locale="cl" widgetVar="myschedule">
-                            <p:ajax event="dateSelect" listener="#{scheduleView.onDateSelect}" update="eventDetails" oncomplete="PF('eventDialog').show();" />
-                            <p:ajax event="eventSelect" listener="#{scheduleView.onEventSelect}" update="eventDetails" oncomplete="PF('eventDialog').show();" />
+                        <p:schedule id="scheduleLocale" value="#{scheduleView.eventModel}" locale="cl" widgetVar="myschedule" timeZone="GMT-4">
+                            <p:ajax event="dateSelect" listener="#{scheduleView.onDateSelect}" update="eventDialogId" oncomplete="PF('eventDialog').show();" />
+                            <p:ajax event="eventSelect" listener="#{scheduleView.onEventSelect}" update="eventDialogId" oncomplete="PF('eventDialog').show();" />
                             <p:ajax event="eventMove" listener="#{scheduleView.onEventMove}" update="messages" />
                             <p:ajax event="eventResize" listener="#{scheduleView.onEventResize}" update="messages" />
                         </p:schedule>
 
-                        <p:dialog widgetVar="eventDialog" header="Ingresar solicitud de sala" showEffect="clip" hideEffect="clip" modal="true">
+                        <p:dialog id="eventDialogId" widgetVar="eventDialog" header="#{scheduleView.event.id == null ? 'Ingresar solicitud de sala' : 'Editar solicitud'}" showEffect="clip" hideEffect="clip" modal="true">
                             <h:panelGrid id="eventDetails" columns="2">
-                                <p:outputLabel value="Profesor:" for="acSimple" />
+                                <p:outputLabel value="Profesor:" for="acSimple" style="float:left"/>
                                 <p:autoComplete id="acSimple" value="#{scheduleView.selectedEvent.profesor}" completeMethod="#{scheduleView.completeText}" required="true"/>
 
-                                <p:outputLabel for="title" value="Sala:" />
-                                <p:selectOneMenu id="title" value="#{scheduleView.selectedEvent.sala}" style="width:114px" required="true">
+                                <p:outputLabel for="sala" value="Sala:" style="float:left"/>
+                                <p:selectOneMenu id="sala" value="#{scheduleView.selectedEvent.sala}" style="width:114px" required="true">
                                     <f:selectItem itemLabel="Seleccionar" itemValue="" />
                                     <f:selectItem itemLabel="Sala 01" itemValue="Sala 01" />
                                     <f:selectItem itemLabel="Sala 02" itemValue="Sala 02" />
                                     <f:selectItem itemLabel="Sala 03" itemValue="Sala 03" />
                                 </p:selectOneMenu>
 
-                                <p:outputLabel for="from" value="Hora desde:" />
-                                <p:calendar id="from" value="#{scheduleView.selectedEvent.fechaDesde}" timeZone="GMT+2" pattern="dd/MM/yyyy HH:mm"/>
+                                <p:outputLabel for="bloque" value="Bloque:" style="float:left"/>
+                                <p:selectOneMenu id="bloque" value="#{scheduleView.selectedEvent.bloque}" style="width:114px" required="true">
+                                    <f:selectItem itemLabel="Seleccionar" itemValue="0" />
+                                    <f:selectItem itemLabel="DIU: 08:15-09:45" itemValue="1" />
+                                    <f:selectItem itemLabel="DIU: 10:00-11:30" itemValue="2" />
+                                    <f:selectItem itemLabel="DIU: 11:45-13:15" itemValue="3" />
+                                    <f:selectItem itemLabel="DIU: 14:00-15:30" itemValue="4" />
+                                    <f:selectItem itemLabel="DIU: 15:40-17:10" itemValue="5" />
+                                    <f:selectItem itemLabel="DIU: 17:20-18:50" itemValue="6" />
+                                    <f:selectItem itemLabel="VES: 18:50-20:10" itemValue="7" />
+                                    <f:selectItem itemLabel="VES: 20:10-21:45" itemValue="8" />
+                                    <f:selectItem itemLabel="VES: 21:45-22:30" itemValue="9" />
 
-                                <p:outputLabel for="to" value="Hora hasta:" />
-                                <p:calendar id="to" value="#{scheduleView.selectedEvent.fechaHasta}" timeZone="GMT+2" pattern="dd/MM/yyyy HH:mm"/>
+                                </p:selectOneMenu>
 
-                                <p:commandButton type="reset" value="Borrar" style="margin-top:7px" />
-                                <p:commandButton id="addButton" value="Guardar" actionListener="#{scheduleView.addEvent}" oncomplete="PF('myschedule').update();PF('eventDialog').hide();"  style="float:right;margin-top:7px"/>
+                                <h:outputText value="¿Rango?" style="float:left"/>
+                                <p:selectBooleanButton id="value1" value="#{scheduleView.withRange}" onLabel="Si" offLabel="No" style="width: 170px;background-color: rgba(62, 62, 62, 0.72) !important;">
+                                    <p:ajax update="eventDetails" listener="#{scheduleView.lol}" />
+                                </p:selectBooleanButton>
+
+
+                                <p:outputLabel id="from_label" for="from" value="Hora desde:" rendered="#{scheduleView.withRange}" style="float:left"/>
+                                <p:calendar id="from" value="#{scheduleView.selectedEvent.fechaDesde}" pattern="dd/MM/yyyy HH:mm" rendered="#{scheduleView.withRange}"/>
+
+                                <p:outputLabel id="to_label" for="to" value="Hora hasta:" rendered="#{scheduleView.withRange}" style="float:left"/>
+                                <p:calendar id="to" value="#{scheduleView.selectedEvent.fechaHasta}" pattern="dd/MM/yyyy HH:mm" rendered="#{scheduleView.withRange}"/>
                             </h:panelGrid>
+
+                            <p:commandButton value="Borrar" rendered="#{scheduleView.event.id != null}" style="margin-top:7px;background-color: #d42626 !important;float:left" action="#{scheduleView.deleteEvent}" update="scheduleLocale" oncomplete="PF('myschedule').update();PF('eventDialog').hide();"/>
+                            <p:commandButton id="addButton" value="Guardar" actionListener="#{scheduleView.addEvent}" update="messages" oncomplete="PF('myschedule').update();PF('eventDialog').hide();"  style="float:right;margin-top:7px"/>
                         </p:dialog>
                     </h:form>
 
