--- a/crscheduler-web/web/resources/rio-layout/css/rio-layout.css
+++ b/crscheduler-web/web/resources/rio-layout/css/rio-layout.css
@@ -882,7 +882,7 @@ i {
   }
 }
 /* Portrait phones and down */
-@media (min-width: 320px) and (max-width: 480px) {
+@media (min-width: 360px) and (max-width: 480px) {
   html,
   body {
     height: auto;
@@ -899,7 +899,7 @@ i {
     color: #ffffff !important;
     font-family: 'roboto_condensedlight' !important;
     font-weight: bolder !important;
-    font-size: 15px !important;
+    font-size: 14px !important;
   }
   #logo {
     width: 230px;
@@ -1079,6 +1079,201 @@ i {
     margin-left: 0px;
   }
 }
+
+@media (max-width: 360px) and (min-width: 0px) {
+  .sub-title {
+    display:none !important;
+  }
+
+  html,
+  body {
+    height: auto;
+  }
+  /* topbar */
+  #layout-topbar {
+    height: 50px;
+  }
+  #logo {
+    width: 230px;
+    height: 64px;
+  }
+  #logo img {
+    height: 24px;
+    max-width: 123px;
+    margin-top: 14px;
+    margin-left: 8%;
+  }
+  #mobile-menu-button {
+    font-size: 22px;
+    padding-top: 8px;
+    width: 37px;
+    height: 29px;
+    margin: 7px -19px auto auto;
+  }
+  #mobile-menu-button.MenuClose {
+    margin-top: 31px !important;
+  }
+  /* top menu */
+  #top-menu {
+    width: 150px;
+    position: absolute;
+    display: none;
+    opacity: 0;
+    right: 2%;
+    margin: 40px 0px 0px 0px;
+    background-color: #ffffff;
+    border-radius: 2px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -webkit-box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+  }
+  #top-menu.showmenu {
+    margin-top: 47px;
+    opacity: 1;
+    display: block;
+  }
+  #top-menu li {
+    width: 150px;
+    padding: 0px;
+    margin: 0px;
+  }
+  #top-menu > li > a {
+    font-size: 14px;
+    text-align: left;
+    padding: 10px;
+    width: 130px;
+    height: auto;
+    cursor: pointer;
+    display: block;
+    float: left;
+    color: #546e7a;
+    border-radius: 0px;
+    -webkit-transition: none;
+    -moz-transition: none;
+    -ms-transition: none;
+    -o-transition: none;
+    transition: none;
+  }
+  #top-menu > li > a:hover,
+  #top-menu li a:focus {
+    background-color: #e0e0e0;
+  }
+  #top-menu > li > a i {
+    float: left;
+    font-size: 18px;
+    margin-right: 5px;
+  }
+  #top-menu > li > a .Txt {
+    display: inline-block;
+    float: left;
+  }
+  #top-menu li ul {
+    width: 150px;
+    height: 0px;
+    padding: 0px;
+    margin: 0px;
+    float: left;
+    overflow: hidden;
+  }
+  #top-menu li ul.active-menu {
+    width: auto;
+    height: auto;
+    background-color: #f5f5f5;
+  }
+  #top-menu li ul li {
+    float: left;
+    padding: 0px;
+    margin: 0px;
+  }
+  #top-menu li ul li input[type="text"] {
+    background-color: transparent;
+    border: 0px none;
+    border-bottom: solid 1px #e0e0e0;
+    padding: 0px;
+    width: 100px;
+    margin: 10px 10px 10px 35px;
+    font-family: 'roboto_condensedlight';
+    font-size: 14px;
+    color: #546e7a;
+  }
+  #top-menu li ul li input[type="text"]::-webkit-input-placeholder {
+    color: #546e7a;
+  }
+  #top-menu li ul li input[type="text"]:-moz-placeholder {
+    color: #546e7a;
+    opacity: 1;
+  }
+  #top-menu li ul li input[type="text"]::-moz-placeholder {
+    color: #546e7a;
+    opacity: 1;
+  }
+  #top-menu li ul li input[type="text"]:-ms-input-placeholder {
+    color: #546e7a;
+  }
+  #top-menu li ul li a {
+    width: 105px;
+    color: #546e7a;
+    padding: 10px 10px 10px 35px;
+    display: block;
+    border: 0px none;
+    font-size: 13px;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+  }
+  #top-menu li ul li a:hover,
+  #top-menu li ul li a:focus {
+    background-color: #e0e0e0;
+  }
+  #show-top-menu {
+    font-size: 22px;
+    padding-top: 8px;
+    width: 37px;
+    height: 29px;
+    position: relative;
+    margin: 7px 2% auto auto;
+  }
+  /* wrapper */
+  #wrapper {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  #wrapperIndent {
+    display: block;
+    height: 100%;
+  }
+  /*Layout Menu Cover */
+  #layout-menu-cover {
+    display: block;
+    height: 100%;
+    position: fixed;
+    z-index: 999;
+    border-bottom: solid 1px #e0e0e0;
+    margin-left: -230px;
+    overflow: hidden;
+  }
+  #layout-menu-cover.showmenu {
+    margin-left: 0px;
+  }
+  .layout-menu {
+    margin-top: 57px;
+  }
+  /*Layout Portlets Cover*/
+  #layout-portlets-cover {
+    display: block;
+    padding: 55px 1% 20px;
+    margin-left: 0px;
+  }
+
+}
+
+
 #FAW .Container33 {
   padding: 10px 0px;
 }
@@ -1625,3 +1820,7 @@ ul.ui-tabs-nav {
 .ui-growl-item {
   background-color: #3c3c3b !important;
 }
+
+.ui-growl-image-info + .ui-growl-message {
+  color: #ffffff !important;
+}∞
