--- a/crscheduler-web/web/WEB-INF/template/template.xhtml
+++ b/crscheduler-web/web/WEB-INF/template/template.xhtml
@@ -13,7 +13,7 @@
             <meta name="apple-mobile-web-app-capable" content="yes" />
             <link rel="shortcut icon" type="image/x-icon" href="#{resource['images/favicon.ico']}"/>
         </f:facet>
-        <title>Blueprints IT Framework: Administración</title>
+        <title>Blackcode IT - Gestión de salas</title>
         
         <h:outputScript name="js/ripple-effect.js" library="rio-layout" />
         <h:outputScript name="js/perfect-scrollbar.js" library="rio-layout" />
