--- a/crscheduler-web/web/resources/rio-layout/css/rio-layout.css
+++ b/crscheduler-web/web/resources/rio-layout/css/rio-layout.css
@@ -78,8 +78,8 @@ body {
   height: 64px;
   position: fixed;
   z-index: 1000;
-  background-color: #0191da;
-  -webkit-box-shadow: 0px 2px 2px 0px #a5ce4e;
+  background-color: #3c3c3b;
+  -webkit-box-shadow: 0px 2px 2px 0px #3c3c3b;
   -moz-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.3);
   /* box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.3); */
 }
@@ -256,7 +256,7 @@ body {
   vertical-align: top;
   position: fixed;
   overflow: hidden;
-  background-color: #fff;
+  background-color: #3c3c3b;
   border-right: solid 1px #e0e0e0;
   z-index: 999;
 }
@@ -278,7 +278,7 @@ body {
   transition: all 0.3s ease;
 }
 .layout-menu li a {
-  color: #455a64;
+  color: #ffffff;
   cursor: pointer;
 }
 .layout-menu ul {
@@ -299,7 +299,7 @@ body {
 }
 #layout-menu-cover:hover .layout-menu > li > a.active-menu,
 .layout-menu > li > a.active-menu {
-  background-color: #e0e0e0;
+  background-color: #13a438;
 }
 .layout-menu .active-menu-restore {
   -webkit-transition: none;
@@ -311,7 +311,8 @@ body {
 .layout-menu > li {
   width: auto;
   height: auto;
-  font-size: 18px;
+  font-size: 13px;
+  border-bottom: 1px solid #736e6e;
 }
 .layout-menu > li > a {
   width: 84%;
@@ -323,16 +324,17 @@ body {
   -ms-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  text-shadow: 1px 1px 1px #000;
 }
 .layout-menu > li > a:hover,
 .layout-menu > li > a:active,
 .layout-menu > li > a:focus {
-  background-color: #a5ce4e;
+  background-color: #13a438;
   color: #fff;
 }
 .layout-menu > li > a > i {
   display: block;
-  font-size: 20px;
+  font-size: 13px;
   float: left;
   margin-right: 11px;
   margin-top: 5px;
