--- a/crscheduler-web/web/views/home.xhtml
+++ b/crscheduler-web/web/views/home.xhtml
@@ -22,7 +22,7 @@
                         <p:dialog id="eventDialogId" widgetVar="eventDialog" header="#{scheduleView.event.id == null ? 'Ingresar solicitud de sala' : 'Editar solicitud'}" showEffect="clip" hideEffect="clip" modal="true">
                             <h:panelGrid id="eventDetails" columns="2">
                                 <p:outputLabel value="Profesor:" for="acSimple" style="float:left"/>
-                                <p:autoComplete id="acSimple" value="#{scheduleView.selectedEvent.profesor}" completeMethod="#{scheduleView.completeText}" required="true" style="width: 170px;"/>
+                                <p:autoComplete id="acSimple" value="#{scheduleView.selectedEvent.profesor}" completeMethod="#{scheduleView.completeText}" required="true" />
 
                                 <p:outputLabel for="sala" value="Sala:" style="float:left"/>
                                 <p:selectOneMenu id="sala" value="#{scheduleView.selectedEvent.sala}" style="width:114px" required="true">
